Fix: remove margin, it doubles the vertical gap between form elements

--- a/public/styles/keystone/field-cloudinaryimage.less
+++ b/public/styles/keystone/field-cloudinaryimage.less
@@ -225,6 +225,7 @@
 		width: 100%;
 	}
 	.images-toolbar {
+		margin-top: 0;
 		.alert {
 			margin-bottom: 10px;
 			float: left;
